[package]

name = "marp"
version = "0.1.0"
authors = ["Adam Hammes <adam@hammes.io>"]
edition = "2018"

[dependencies]

crossbeam = "0.7.1"
http = "0.1.17"
liquid = "0.18"
notify = "4.0.12"
pulldown-cmark = "0.5.2"
rouille = "3.0.0"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"
structopt = "0.2.17"
ws = "0.8.1"
